--- a/spec/fixtures/vcr_cassettes/DO_NOT_DELETE_user_create_rick_sad_path.yml
+++ b/spec/fixtures/vcr_cassettes/DO_NOT_DELETE_user_create_rick_sad_path.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://quest-quill-api.onrender.com/api/v1/users?email=&password=1234&username=jill
+    uri: https://quest-quill-api.onrender.com/api/v1/users?email=&password=1234&username=rick
     body:
       encoding: UTF-8
       string: ''
@@ -21,7 +21,7 @@ http_interactions:
       message: Unprocessable Entity
     headers:
       Date:
-      - Mon, 06 Nov 2023 20:31:15 GMT
+      - Wed, 08 Nov 2023 03:11:03 GMT
       Content-Type:
       - text/html; charset=UTF-8
       Content-Length:
@@ -29,19 +29,19 @@ http_interactions:
       Connection:
       - keep-alive
       Cf-Ray:
-      - 8220194ec8ec69e1-DEN
+      - 822aa04aea675382-DEN
       Cf-Cache-Status:
       - DYNAMIC
       Vary:
       - Accept-Encoding
       Rndr-Id:
-      - e02b114a-52b5-4593
+      - f427a881-1920-4745
       X-Render-Origin-Server:
       - Render
       X-Request-Id:
-      - 87d1b1a1-5a35-4dc8-a137-b865ac27aa09
+      - 49084f4b-6cfa-4b45-98ec-685b76359f75
       X-Runtime:
-      - '1.431596'
+      - '2.664193'
       Server:
       - cloudflare
       Alt-Svc:
@@ -49,5 +49,5 @@ http_interactions:
     body:
       encoding: ASCII-8BIT
       string: ''
-  recorded_at: Mon, 06 Nov 2023 20:31:15 GMT
+  recorded_at: Wed, 08 Nov 2023 03:11:03 GMT
 recorded_with: VCR 6.2.0
