--- a/spec/fixtures/vcr_cassettes/DO_NOT_DELETE_user_login_rick.yml
+++ b/spec/fixtures/vcr_cassettes/DO_NOT_DELETE_user_login_rick.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://quest-quill-api.onrender.com/api/v1/users/login?email=john@gmail.com&password=1234
+    uri: https://quest-quill-api.onrender.com/api/v1/users/login?email=rick@gmail.com&password=5678
     body:
       encoding: UTF-8
       string: ''
@@ -17,11 +17,11 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 401
+      message: Unauthorized
     headers:
       Date:
-      - Mon, 06 Nov 2023 23:24:15 GMT
+      - Wed, 08 Nov 2023 03:15:13 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -29,19 +29,17 @@ http_interactions:
       Connection:
       - keep-alive
       Cf-Ray:
-      - 822116b82d725382-DEN
+      - 822aa66a9990518b-DEN
       Cf-Cache-Status:
       - DYNAMIC
       Cache-Control:
-      - max-age=0, private, must-revalidate
-      Etag:
-      - W/"60d5b295781c0b711b4aa1cb61f2f691"
+      - no-cache
       Vary:
       - Accept-Encoding
       Referrer-Policy:
       - strict-origin-when-cross-origin
       Rndr-Id:
-      - c245238b-36f9-4e58
+      - 440931fd-2347-4879
       X-Content-Type-Options:
       - nosniff
       X-Download-Options:
@@ -53,9 +51,9 @@ http_interactions:
       X-Render-Origin-Server:
       - Render
       X-Request-Id:
-      - 2ce0543e-a27c-4df4-a39f-dbb375675eda
+      - f33145d6-d04b-430e-a08c-510888b34da4
       X-Runtime:
-      - '1.694263'
+      - '2.326661'
       X-Xss-Protection:
       - '0'
       Server:
@@ -64,6 +62,6 @@ http_interactions:
       - h3=":443"; ma=86400
     body:
       encoding: ASCII-8BIT
-      string: '{"message":"Login successful","user_id":2}'
-  recorded_at: Mon, 06 Nov 2023 23:24:15 GMT
+      string: '{"error":"Authentication failed"}'
+  recorded_at: Wed, 08 Nov 2023 03:15:13 GMT
 recorded_with: VCR 6.2.0
