--- a/spec/fixtures/vcr_cassettes/DO_NOT_DELETE_user_login_rick_2.yml
+++ b/spec/fixtures/vcr_cassettes/DO_NOT_DELETE_user_login_rick_2.yml
@@ -2,7 +2,57 @@
 http_interactions:
 - request:
     method: post
-    uri: https://quest-quill-api.onrender.com/api/v1/users?email=jill@gmail.com&password=1234&username=jill
+    uri: https://quest-quill-api.onrender.com/api/v1/users?email=rick@gmail.com&password=1234&username=rick
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.11
+      Content-Length:
+      - '0'
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 422
+      message: Unprocessable Entity
+    headers:
+      Date:
+      - Wed, 08 Nov 2023 03:16:48 GMT
+      Content-Type:
+      - text/html; charset=UTF-8
+      Content-Length:
+      - '0'
+      Connection:
+      - keep-alive
+      Cf-Ray:
+      - 822aa8b9ef5d5390-DEN
+      Cf-Cache-Status:
+      - DYNAMIC
+      Vary:
+      - Accept-Encoding
+      Rndr-Id:
+      - 476f0783-b435-45bb
+      X-Render-Origin-Server:
+      - Render
+      X-Request-Id:
+      - a77ce65a-ff7d-4df6-8710-4b1ffe09810f
+      X-Runtime:
+      - '2.288424'
+      Server:
+      - cloudflare
+      Alt-Svc:
+      - h3=":443"; ma=86400
+    body:
+      encoding: ASCII-8BIT
+      string: ''
+  recorded_at: Wed, 08 Nov 2023 03:16:48 GMT
+- request:
+    method: post
+    uri: https://quest-quill-api.onrender.com/api/v1/users/login?email=rick@gmail.com&password=1234
     body:
       encoding: UTF-8
       string: ''
@@ -21,7 +71,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 06 Nov 2023 20:25:51 GMT
+      - Wed, 08 Nov 2023 03:16:50 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -29,19 +79,19 @@ http_interactions:
       Connection:
       - keep-alive
       Cf-Ray:
-      - 8220116959765206-DEN
+      - 822aa8c9ab7051ee-DEN
       Cf-Cache-Status:
       - DYNAMIC
       Cache-Control:
       - max-age=0, private, must-revalidate
       Etag:
-      - W/"b2c29f364857c260b667770403e72548"
+      - W/"0a177be635c545ce8260d5e7d70a19e1"
       Vary:
       - Accept-Encoding
       Referrer-Policy:
       - strict-origin-when-cross-origin
       Rndr-Id:
-      - d9ea064c-133c-4df5
+      - 10d3f627-10fe-4946
       X-Content-Type-Options:
       - nosniff
       X-Download-Options:
@@ -53,9 +103,9 @@ http_interactions:
       X-Render-Origin-Server:
       - Render
       X-Request-Id:
-      - e1231908-483b-4cd5-b70d-d5f4bb4b9360
+      - 327db37f-93a2-4477-9fb9-291f324bbde4
       X-Runtime:
-      - '1.395666'
+      - '2.217615'
       X-Xss-Protection:
       - '0'
       Server:
@@ -64,11 +114,11 @@ http_interactions:
       - h3=":443"; ma=86400
     body:
       encoding: ASCII-8BIT
-      string: '{"id":3,"username":"jill","email":"jill@gmail.com","password_digest":"$2a$12$PvBMAT9RXaDPMI7Gr8lVceTYyWApv2EFWR0QCTTTzKQGAZeiH2Dg2","created_at":"2023-11-06T20:25:51.754Z","updated_at":"2023-11-06T20:25:51.754Z"}'
-  recorded_at: Mon, 06 Nov 2023 20:25:51 GMT
+      string: '{"message":"Login successful","user_id":13}'
+  recorded_at: Wed, 08 Nov 2023 03:16:50 GMT
 - request:
     method: get
-    uri: https://quest-quill-api.onrender.com/api/v1/users/3
+    uri: https://quest-quill-api.onrender.com/api/v1/users/13
     body:
       encoding: US-ASCII
       string: ''
@@ -85,7 +135,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 06 Nov 2023 20:25:52 GMT
+      - Wed, 08 Nov 2023 03:16:50 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -93,19 +143,19 @@ http_interactions:
       Connection:
       - keep-alive
       Cf-Ray:
-      - 822011734cce519e-DEN
+      - 822aa8d89c951f29-DEN
       Cf-Cache-Status:
       - DYNAMIC
       Cache-Control:
       - max-age=0, private, must-revalidate
       Etag:
-      - W/"b2c29f364857c260b667770403e72548"
+      - W/"076608bb786e23d9a97cb8c1d02a013f"
       Vary:
       - Accept-Encoding
       Referrer-Policy:
       - strict-origin-when-cross-origin
       Rndr-Id:
-      - 8bfab614-e9c7-4f7c
+      - 8bd38a14-1d95-463b
       X-Content-Type-Options:
       - nosniff
       X-Download-Options:
@@ -117,9 +167,9 @@ http_interactions:
       X-Render-Origin-Server:
       - Render
       X-Request-Id:
-      - 54ab593d-32a0-42b6-9970-8ead5e9a3279
+      - 9338ad00-994d-4cb6-8d40-d51b803ecb62
       X-Runtime:
-      - '0.009952'
+      - '0.009405'
       X-Xss-Protection:
       - '0'
       Server:
@@ -128,11 +178,11 @@ http_interactions:
       - h3=":443"; ma=86400
     body:
       encoding: ASCII-8BIT
-      string: '{"id":3,"username":"jill","email":"jill@gmail.com","password_digest":"$2a$12$PvBMAT9RXaDPMI7Gr8lVceTYyWApv2EFWR0QCTTTzKQGAZeiH2Dg2","created_at":"2023-11-06T20:25:51.754Z","updated_at":"2023-11-06T20:25:51.754Z"}'
-  recorded_at: Mon, 06 Nov 2023 20:25:51 GMT
+      string: '{"data":{"id":"13","type":"user","attributes":{"username":"rick","email":"rick@gmail.com","user_photo":{"name":"user_photo","record":{"id":13,"username":"rick","email":"rick@gmail.com","password_digest":"$2a$12$qU41GRI3R4X7cGE4/UioGO3LLHSsKSsi.K640VKtLrf1WYwc7jNEK","created_at":"2023-11-08T03:10:59.546Z","updated_at":"2023-11-08T03:10:59.546Z","token":null,"token_expiration":null}},"token":null,"token_expiration":null,"campaigns":[]}}}'
+  recorded_at: Wed, 08 Nov 2023 03:16:50 GMT
 - request:
     method: get
-    uri: https://quest-quill-api.onrender.com/api/v1/users/3
+    uri: https://quest-quill-api.onrender.com/api/v1/users/13
     body:
       encoding: US-ASCII
       string: ''
@@ -149,7 +199,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 06 Nov 2023 20:25:52 GMT
+      - Wed, 08 Nov 2023 03:16:51 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -157,19 +207,19 @@ http_interactions:
       Connection:
       - keep-alive
       Cf-Ray:
-      - 82201176dbbe5341-DEN
+      - 822aa8da1eef5391-DEN
       Cf-Cache-Status:
       - DYNAMIC
       Cache-Control:
       - max-age=0, private, must-revalidate
       Etag:
-      - W/"b2c29f364857c260b667770403e72548"
+      - W/"076608bb786e23d9a97cb8c1d02a013f"
       Vary:
       - Accept-Encoding
       Referrer-Policy:
       - strict-origin-when-cross-origin
       Rndr-Id:
-      - 3c1a539d-a896-447c
+      - 6b1aaa92-0ff2-41d4
       X-Content-Type-Options:
       - nosniff
       X-Download-Options:
@@ -181,9 +231,9 @@ http_interactions:
       X-Render-Origin-Server:
       - Render
       X-Request-Id:
-      - fd9ebe2c-237c-46ec-927b-28644aaab71f
+      - ba060d60-e98a-49f5-8e74-767dfc3bd512
       X-Runtime:
-      - '0.010855'
+      - '0.008993'
       X-Xss-Protection:
       - '0'
       Server:
@@ -192,6 +242,6 @@ http_interactions:
       - h3=":443"; ma=86400
     body:
       encoding: ASCII-8BIT
-      string: '{"id":3,"username":"jill","email":"jill@gmail.com","password_digest":"$2a$12$PvBMAT9RXaDPMI7Gr8lVceTYyWApv2EFWR0QCTTTzKQGAZeiH2Dg2","created_at":"2023-11-06T20:25:51.754Z","updated_at":"2023-11-06T20:25:51.754Z"}'
-  recorded_at: Mon, 06 Nov 2023 20:25:52 GMT
+      string: '{"data":{"id":"13","type":"user","attributes":{"username":"rick","email":"rick@gmail.com","user_photo":{"name":"user_photo","record":{"id":13,"username":"rick","email":"rick@gmail.com","password_digest":"$2a$12$qU41GRI3R4X7cGE4/UioGO3LLHSsKSsi.K640VKtLrf1WYwc7jNEK","created_at":"2023-11-08T03:10:59.546Z","updated_at":"2023-11-08T03:10:59.546Z","token":null,"token_expiration":null}},"token":null,"token_expiration":null,"campaigns":[]}}}'
+  recorded_at: Wed, 08 Nov 2023 03:16:50 GMT
 recorded_with: VCR 6.2.0
